--- a/elements/profile-tile.html
+++ b/elements/profile-tile.html
@@ -1,9 +1,9 @@
 <div id="gp-container-profile">
-  <a href="https://github.com/mackboudreau"><img id='gp-avatar' src="https://avatars2.githubusercontent.com/u/16639577?v=4"></a>
+  <a href="https://github.com/afifahrahmak"><img id='gp-avatar' src="https://avatars3.githubusercontent.com/u/52028283?s=460&u=5c2a850d3fb786fd70e2e8c6268d6ce17c43569b&v=4"></a>
   <div id='gp-information'>
-    <a class='gp-link' href="https://github.com/mackboudreau">
-    <span class="gp-element gp-name">Mackenzie Boudreau</span>
-    <span class="gp-element gp-user">mackboudreau</span>
+    <a class='gp-link' href="https://github.com/afifahrahmak">
+    <span class="gp-element gp-name">Afifah Rahma Kustanto</span>
+    <span class="gp-element gp-user">afifahrahmak</span>
     </a>
     <span class="gp-element gp-bio">I'm insanely interested in mobile, web, and ML. I want to learn so many things and have so far to go still. I love to meet people as enthusiastic in CS as me!</span>
   </div>
@@ -11,6 +11,6 @@
     <span class="gp-stat"><b class="gp-stat-val">17</b><span class="gp-stat-desc">Repos</span></span>
     <span class="gp-stat"><b class="gp-stat-val">6</b><span class="gp-stat-desc">Followers</span></span>
     <span class="gp-stat"><b class="gp-stat-val">12</b><span class="gp-stat-desc">Following</span></span>
-    <a href="https://github.com/mackboudreau" class="gp-btn gp-follow">Follow</a>
+    <a href="https://github.com/afifahrahmak" class="gp-btn gp-follow">Follow</a>
   </div>
 </div>
