--- a/demo.html
+++ b/demo.html
@@ -12,8 +12,14 @@
 </head>
 <body>
   <script src="GitHubPinner.js"></script>
-  <div data="https://github.com/mackboudreau?tab=repositories" class="github-pinner" style="visibility: hidden;"></div>
-  <div data="https://github.com/mackboudreau" class="github-pinner flat" style="visibility: hidden;"></div>
-  <div data="https://github.com/mackboudreau/DalhousieScheduleBuilder" class="github-pinner flat" style="visibility: hidden;"></div>
+  <!-- <div data="https://github.com/afifahrahmak?tab=repositories" class="github-pinner" style="visibility: hidden;"></div> -->
+  <div class="template">
+    <div data="https://github.com/afifahrahmak" class="github-pinner flat" style="visibility: hidden;"></div>
+    <div class="repos-tile">
+      <div data="https://github.com/afifahrahmak/HypoDD/" class="github-pinner flat" style="visibility: hidden;"></div>
+      <div data="https://github.com/afifahrahmak/3D-Velocity-Modelling" class="github-pinner flat" style="visibility: hidden;"></div>
+      <div data="https://github.com/afifahrahmak/ES6-PHASE0" class="github-pinner flat" style="visibility: hidden;"></div>
+    </div>
+  </div>
 </body>
 </html>
