--- a/demo.html
+++ b/demo.html
@@ -13,12 +13,15 @@
 <body>
   <script src="GitHubPinner.js"></script>
   <!-- <div data="https://github.com/afifahrahmak?tab=repositories" class="github-pinner" style="visibility: hidden;"></div> -->
-  <div class="template">
+  <div class="github-template">
     <div data="https://github.com/afifahrahmak" class="github-pinner flat" style="visibility: hidden;"></div>
-    <div class="repos-tile">
-      <div data="https://github.com/afifahrahmak/HypoDD/" class="github-pinner flat" style="visibility: hidden;"></div>
-      <div data="https://github.com/afifahrahmak/3D-Velocity-Modelling" class="github-pinner flat" style="visibility: hidden;"></div>
+    <script src="GitHubPinner.js"></script>
+    <div class="github-repos">
+      <div data="https://github.com/afifahrahmak/3D-Velocity-Modelling" class="github-pinner flat"
+        style="visibility: hidden;"></div>
       <div data="https://github.com/afifahrahmak/ES6-PHASE0" class="github-pinner flat" style="visibility: hidden;"></div>
+      <div data="https://github.com/afifahrahmak/algorithm-pseudocode" class="github-pinner flat"
+        style="visibility: hidden;"></div>
     </div>
   </div>
 </body>
